[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.builder"

[tool.poetry]
name = "agentflow-orchestra"
version = "0.1.0"
description = "Distributed multi-agent orchestration framework"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.3"
pydantic = "^2.5"
fastapi = "^0.95"
pytest = "^7.4"
aiohttp = "^3.8"
gunicorn = "^21.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1"
lizard = "^1.7"
coverage = "^7.5"
nox = "^2024.4.13"
